force-app/main/default/objects/Call_Line__c/fields/A2__c.field-meta.xml
<CustomField>
    <fullName>A2__c</fullName>
    <label>A2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>