force-app/main/default/objects/Call_Line__c/fields/A3__c.field-meta.xml
<CustomField>
    <fullName>A3__c</fullName>
    <label>A3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>