force-app/main/default/objects/Call_Line__c/fields/A3_Point__c.field-meta.xml
<CustomField>
    <fullName>A3_Point__c</fullName>
    <formula>IF(TEXT(Activity_Result__c) == &apos;Contacted&apos; &amp;&amp; 
 TEXT(A3__c) == &apos;Yes&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A3 Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>