force-app/main/default/objects/Call_Line__c/fields/Amount_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Amount_Cancel__c</fullName>
    <description>Amount Agree to Cancel</description>
    <formula>IF(Call_List__r.RecordType.Name ==&quot;Collection AMFS&quot; &amp;&amp; TEXT(Call_List__r.Case_Type_Config__c) == &apos;Redemption TM&apos; &amp;&amp; TEXT(Call_Status_Config__c)== &apos;Inforced&apos;, APE_Convert__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Cancel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>