force-app/main/default/objects/Call_Line__c/fields/Amount_Conserved__c.field-meta.xml
<CustomField>
    <fullName>Amount_Conserved__c</fullName>
    <formula>IF((TEXT(Call_List__r.Case_Type_Config__c) == &apos;Renewal Reminder&apos; ||
TEXT(Call_List__r.Case_Type_Config__c) == &apos;Cuti Premi&apos; ||
TEXT(Call_List__r.Case_Type_Config__c) == &apos;Lapse Konven&apos; ||
TEXT(Call_List__r.Case_Type_Config__c) == &apos;MKP&apos; ||
TEXT(Call_List__r.Case_Type_Config__c) == &apos;Lapse TM&apos; ||
TEXT(Call_List__r.Case_Type_Config__c) == &apos;RTU&apos;) &amp;&amp; TEXT(Call_Status_Config__c)== &apos;Approved&apos;,APE_Convert__c,IF(TEXT(Call_List__r.Case_Type_Config__c) == &apos;Redemption TM&apos; &amp;&amp; TEXT(Call_Status_Config__c)== &apos;Inforced&apos;,APE_Convert__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Conserved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>