force-app/main/default/objects/Call_Line__c/fields/Amount_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Contacted__c</fullName>
    <description>Only for Collection AMFS campaign Redemption TM</description>
    <formula>IF(Call_List__r.RecordType.Name==&apos;Collection AMFS&apos; &amp;&amp; TEXT(Call_List__r.Case_Type_Config__c) == &apos;Redemption TM&apos; &amp;&amp; (TEXT(Call_Status_Config__c)== &apos;Cancel&apos; || TEXT(Call_Status_Config__c)== &apos;Inforced&apos; || TEXT(Call_Status_Config__c)== &apos;Pending&apos;),APE_Convert__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Contacted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>