force-app/main/default/objects/Call_Line__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <formula>IF(Call_List__r.RecordType.Name==&apos;Collection AMFS&apos; &amp;&amp;  TEXT(Status_Paid_Not_Paid__c)==&apos;Y&apos; &amp;&amp; (TEXT(Call_List__r.Case_Type_Config__c) == &apos;Redemption Konven&apos; ||TEXT(Call_List__r.Case_Type_Config__c) == &apos;Withdrawal&apos;), APE_Convert__c ,IF(Call_List__r.RecordType.Name==&apos;Collection AMFS&apos; &amp;&amp;  TEXT(Status_Paid_Not_Paid__c)==&apos;Paid&apos; &amp;&amp; TEXT(Call_List__r.Case_Type_Config__c) != &apos;Redemption Konven&apos; &amp;&amp; TEXT(Call_List__r.Case_Type_Config__c) !=&apos;Withdrawal&apos;,APE_Convert__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>