force-app/main/default/objects/Call_Line__c/fields/Amount_Paid_Bio__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_Bio__c</fullName>
    <formula>Amount_Paid__c / 1000000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Paid - Bio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>