force-app/main/default/objects/Call_Line__c/fields/Amount_Paid_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_Contacted__c</fullName>
    <formula>IF(Call_List__r.RecordType.Name==&apos;Collection AMFS&apos; &amp;&amp; (TEXT(Call_Status_Config__c)==&apos;Approved&apos; || TEXT(Call_Status_Config__c)==&apos;Not Approved&apos;) &amp;&amp; TEXT(Status_Paid_Not_Paid__c)==&apos;Paid&apos; &amp;&amp; (TEXT(Call_List__r.Case_Type_Config__c) == &apos;Renewal Reminder&apos; || TEXT(Call_List__r.Case_Type_Config__c) == &apos;Lapse Konven&apos; || TEXT(Call_List__r.Case_Type_Config__c) == &apos;MKP&apos; || TEXT(Call_List__r.Case_Type_Config__c) == &apos;Lapse TM&apos;), APE_Convert__c ,IF(Call_List__r.RecordType.Name==&apos;Collection AMFS&apos; &amp;&amp; TEXT(Call_Status_Config__c)==&apos;Cancel&apos; &amp;&amp; TEXT(Status_Paid_Not_Paid__c)==&apos;Paid&apos; &amp;&amp; (TEXT(Call_List__r.Case_Type_Config__c) == &apos;Redemption TM&apos;),APE_Convert__c,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Paid Contacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>