force-app/main/default/objects/Call_Line__c/fields/Amount_Retain_Redemption__c.field-meta.xml
<CustomField>
    <fullName>Amount_Retain_Redemption__c</fullName>
    <formula>IF( AND( ISPICKVAL(Call_Status_Config__c, &apos;Contacted&apos;), Selisih__c != null, OR(ISPICKVAL(Reason_Status_Config__c, &apos;Agree - Agree to Cancel Withdrawal&apos;), ISPICKVAL(Reason_Status_Config__c, &apos;Agree - With Reduction Withdrawal Amount&apos;), ISPICKVAL(Reason_Status_Config__c, &apos;Agree - Others&apos;) ) ), Selisih__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Retain Redemption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>