force-app/main/default/objects/Call_Line__c/fields/Amount_Uncontacted__c.field-meta.xml
<CustomField>
    <fullName>Amount_Uncontacted__c</fullName>
    <formula>IF(Call_List__r.RecordType.Name==&apos;Collection AMFS&apos; &amp;&amp; (TEXT(Call_List__r.Case_Type_Config__c) == &apos;Lapse Konven&apos; || TEXT(Call_List__r.Case_Type_Config__c) == &apos;Renewal Reminder&apos; || TEXT(Call_List__r.Case_Type_Config__c) == &apos;MKP&apos; || TEXT(Call_List__r.Case_Type_Config__c) == &apos;Cuti Premi&apos; || TEXT(Call_List__r.Case_Type_Config__c) == &apos;RTU&apos; || TEXT(Call_List__r.Case_Type_Config__c) == &apos;Lapse TM&apos;) &amp;&amp; TEXT(Call_Status_Config__c)== &apos;Uncontacted&apos;, APE_Convert__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Uncontacted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>