force-app/main/default/objects/Call_Line__c/fields/APE__c.field-meta.xml
<CustomField>
    <fullName>APE__c</fullName>
    <label>APE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>