force-app/main/default/objects/Call_Line__c/fields/APE_Amount_Bio__c.field-meta.xml
<CustomField>
    <fullName>APE_Amount_Bio__c</fullName>
    <formula>APE_Convert__c / 1000000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APE / Amount - Bio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>