force-app/main/default/objects/Call_Line__c/fields/APE_Contact__c.field-meta.xml
<CustomField>
    <fullName>APE_Contact__c</fullName>
    <formula>Contact__r.WelcomeCall_APE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APE Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>