force-app/main/default/objects/Call_Line__c/fields/APE_Convert__c.field-meta.xml
<CustomField>
    <fullName>APE_Convert__c</fullName>
    <formula>IF((ISPICKVAL(Call_List__r.Case_Type_Config__c,&apos;Withdrawal&apos;) || ISPICKVAL(Call_List__r.Case_Type_Config__c,&apos;Redemption Konven&apos;))&amp;&amp; Currency__c=&apos;USD&apos;, Amount__c * 14000,
IF((ISPICKVAL(Call_List__r.Case_Type_Config__c,&apos;Withdrawal&apos;) || ISPICKVAL(Call_List__r.Case_Type_Config__c,&apos;Redemption Konven&apos;))&amp;&amp; Currency__c!=&apos;USD&apos;,Amount__c,
IF((ISPICKVAL(Call_List__r.Case_Type_Config__c,&apos;Redemption TM&apos;) || ISPICKVAL(Call_List__r.Case_Type_Config__c,&apos;Lapse TM&apos;))&amp;&amp; Currency__c==&apos;USD&apos;,(APE__c)/12*14000,
IF((ISPICKVAL(Call_List__r.Case_Type_Config__c,&apos;Redemption TM&apos;) || ISPICKVAL(Call_List__r.Case_Type_Config__c,&apos;Lapse TM&apos;))&amp;&amp; Currency__c!=&apos;USD&apos;,APE__c/12,
IF(Currency__c==&apos;USD&apos;,APE__c*14000,APE__c)))))</formula>
    <label>APE / Amount Convert</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>