force-app/main/default/objects/Call_Line__c/fields/APE_Convert_MPS__c.field-meta.xml
<CustomField>
    <fullName>APE_Convert_MPS__c</fullName>
    <formula>IF((ISPICKVAL(Case_Type_Config__c,&apos;Collection-Redemption Konven MPS&apos;)||ISPICKVAL(Case_Type_Config__c,&apos;Collection-Withdrawal MPS&apos;))&amp;&amp; Currency__c=&apos;USD&apos;, Amount__c * 14000,

IF((ISPICKVAL(Case_Type_Config__c,&apos;Collection-Redemption Konven MPS&apos;)||ISPICKVAL(Case_Type_Config__c,&apos;Collection-Withdrawal MPS&apos;))&amp;&amp; Currency__c!=&apos;USD&apos;,Amount__c,

0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APE Convert MPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>