force-app/main/default/objects/Call_Line__c/fields/APE_Total_Child__c.field-meta.xml
<CustomField>
    <fullName>APE_Total_Child__c</fullName>
    <label>APE / Amount Total Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>