force-app/main/default/objects/Call_Line__c/fields/Assesment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assesment_Status__c</fullName>
    <label>Assesment Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>