force-app/main/default/objects/Call_Line__c/fields/Attempt_call_Day__c.field-meta.xml
<CustomField>
    <fullName>Attempt_call_Day__c</fullName>
    <label>Total Attempt Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>