force-app/main/default/objects/Call_Line__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <formula>Contact__r.Batch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch</label>
    <type>Text</type>
</CustomField>