force-app/main/default/objects/Call_Line__c/fields/Bersedia_Diverivikasi__c.field-meta.xml
<CustomField>
    <fullName>Bersedia_Diverivikasi__c</fullName>
    <formula>IF(AND(ISPICKVAL(Call_Status_Config__c, &apos;Contacted&apos;), OR(ISPICKVAL(Reason_Status_Config__c, &apos;Agree - Verification Success&apos;), ISPICKVAL(Reason_Status_Config__c, &apos;Agree - Verification Failed&apos;))),1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bersedia Diverivikasi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>