force-app/main/default/objects/Call_Line__c/fields/Call_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Call_Attempt__c</fullName>
    <formula>IF (Count_Dial__c == 0 &amp;&amp; TEXT(Call_Status_Config__c) == &apos;&apos;,0,
IF (Count_Dial__c == 0 &amp;&amp; TEXT(Call_Status_Config__c) != &apos;&apos;,
IF (TEXT( Reason_Status_Config__c) == &apos;No Follow Up&apos;,0,1)
,
Count_Dial__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call-Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>