force-app/main/default/objects/Call_Line__c/fields/Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>Call Date</description>
    <label>Call Date</label>
    <type>Date</type>
</CustomField>