force-app/main/default/objects/Call_Line__c/fields/Call_End_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Call_End_Datetime__c</fullName>
    <label>Call End Datetime</label>
    <type>DateTime</type>
</CustomField>