force-app/main/default/objects/Call_Line__c/fields/Call_Generated_Counter__c.field-meta.xml
<CustomField>
    <fullName>Call_Generated_Counter__c</fullName>
    <description>Generate counter. 1 = sudah pernah digenerate 1x ~ callback.
If 0 = FRESH</description>
    <label>Call Generated Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>