force-app/main/default/objects/Call_Line__c/fields/Call_Status_Label__c.field-meta.xml
<CustomField>
    <fullName>Call_Status_Label__c</fullName>
    <formula>IF(NOT(ISPICKVAL(Call_Status_Config__c,&apos;&apos;)),TEXT(Call_Status_Config__c),&apos;Not Yet Call&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Status Label</label>
    <type>Text</type>
</CustomField>