force-app/main/default/objects/Call_Line__c/fields/call_status_old_new_not_equal__c.field-meta.xml
<CustomField>
    <fullName>call_status_old_new_not_equal__c</fullName>
    <formula>if (  text(Activity_Result__c)   &lt;&gt;   text(Call_Status_Config__c) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>call status old new not equal</label>
    <type>Checkbox</type>
</CustomField>