force-app/main/default/objects/Call_Line__c/fields/Campaign_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Generated_Date__c</fullName>
    <formula>Call_List__r.Generated_Date__c</formula>
    <label>Campaign Generated Date</label>
    <type>Date</type>
</CustomField>